tests/neg-custom-args/captures/safemode-5.scala
package test
import language.experimental.safe

object Test:
  def h(x: Any) = x.asInstanceOf[String] // error